# webcam-iot-ingest

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  justfile  pyproject.toml  test_sender.py
api/: file_upload.py  main.py  messages.py  model.py  send_mqtt.py
grafana/dashboards/: ingest.json  mqtt.json
grafana/provisioning/dashboards/: dashboards.yml
prometheus/: prometheus.yml
tests/: test_upload.py
